test/testcase/version_1/fail/track-markup-meta.xspf
<?xml version="1.0" encoding="utf-8"?>

<!--
  Description: meta must not contain HTML

  Expect:      ContainsHTML{element:meta,parent:track}
-->

<playlist version="1" xmlns="http://xspf.org/ns/0/">

  <trackList>
    <track>

      <meta rel="http://example.com/"><blink>My Way</blink></meta>

    </track>
  </trackList>

</playlist>
